pull replicas from values and start to change rw_pair to tempalte

--- a/voltha/templates/adapters-simulated.yml
+++ b/voltha/templates/adapters-simulated.yml
@@ -30,7 +30,7 @@ metadata:
   name: adapter-simulated-olt
   namespace: {{ .Values.global.namespace }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas.adapter_simulated_olt }}
   selector:
     matchLabels:
       app: adapter-simulated-olt
@@ -81,7 +81,7 @@ metadata:
   name: adapter-simulated-onu
   namespace: {{ .Values.global.namespace }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas.adapter_simulated_onu }}
   selector:
     matchLabels:
       app: adapter-simulated-onu
