--- a/voltha/templates/onos.yml
+++ b/voltha/templates/onos.yml
@@ -25,7 +25,7 @@ metadata:
   name: onos
   namespace: {{ .Values.global.namespace }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas.onos }}
   template:
     metadata:
       labels:
