--- a/voltha/templates/affinity-router.yml
+++ b/voltha/templates/affinity-router.yml
@@ -1,4 +1,4 @@
-# Copyright 2018 the original author or authors.
+# Copyright 2019 the original author or authors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,8 +17,10 @@ kind: Service
 metadata:
   name: afrouter
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
-#  clusterIP: None
+  namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
   ports:
     - name: grpc
       port: 55555
@@ -31,6 +33,7 @@ kind: Deployment
 metadata:
   name: afrouter
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
   replicas: {{ .Values.replicas.afrouter }}
   template:
@@ -40,6 +43,8 @@ spec:
       annotations:
         cni: "calico"
     spec:
+      namespace: {{ .Values.global.namespace }}
+      serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
       containers:
       - name: arouter
         image: {{ .Values.global.registry }}{{ .Values.images.afrouter.repository }}:{{ tpl .Values.images.afrouter.tag . }}
