--- a/voltha/templates/adapters-simulated.yml
+++ b/voltha/templates/adapters-simulated.yml
@@ -19,7 +19,10 @@ kind: Service
 metadata:
   name: adapter-simulated-olt
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
+  namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
   clusterIP: None
   selector:
     app: adapter-simulated-olt
@@ -29,6 +32,7 @@ kind: Deployment
 metadata:
   name: adapter-simulated-olt
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
   replicas: {{ .Values.replicas.adapter_simulated_olt }}
   selector:
@@ -41,6 +45,8 @@ spec:
       annotations:
         cni: "calico"
     spec:
+      namespace: {{ .Values.global.namespace }}
+      serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
       containers:
         - name: adapter-simulated-olt
           image: {{ .Values.global.registry }}{{ .Values.images.adapter_simulated_olt.repository }}:{{ tpl .Values.images.adapter_simulated_olt.tag . }}
@@ -50,16 +56,28 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: ETCD_SERVICE
+              value: "{{ .Values.etcd.service }}"
+            - name: ETCD_SERVICE_PORT
+              value: "{{ .Values.etcd.port }}"
+            - name: ADAPTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.adapter.service }}"
+            - name: ADAPTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.adapter.port }}"
+            - name: CLUSTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.cluster.service }}"
+            - name: CLUSTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.cluster.port }}"
           args:
             - "/app/simulated_olt"
-            - "-kafka_adapter_host=kafka.$(NAMESPACE).svc.cluster.local"
-            - "-kafka_adapter_port=9092"
-            - "-kafka_cluster_host=kafka.$(NAMESPACE).svc.cluster.local"
-            - "-kafka_cluster_port=9092"
+            - "-kafka_adapter_host=$(ADAPTER_KAFKA_SERVICE)"
+            - "-kafka_adapter_port=$(ADAPTER_KAFKA_SERVICE_PORT)"
+            - "-kafka_cluster_host=$(CLUSTER_KAFKA_SERVICE)"
+            - "-kafka_cluster_port=$(CLUSTER_KAFKA_SERVICE_PORT)"
             - "-core_topic=rwcore"
             - "-simulator_topic=simulated_olt"
-            - "-kv_store_host=etcd.$(NAMESPACE).svc.cluster.local"
-            - "-kv_store_port=2379"
+            - "-kv_store_host=$(ETCD_SERVICE)"
+            - "-kv_store_port=$(ETCD_SERVICE_PORT)"
             - "-onu_number=100"
 ---
 
@@ -70,7 +88,10 @@ kind: Service
 metadata:
   name: adapter-simulated-onu
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
+  namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
   clusterIP: None
   selector:
     app: adapter-simulated-onu
@@ -80,6 +101,7 @@ kind: Deployment
 metadata:
   name: adapter-simulated-onu
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
   replicas: {{ .Values.replicas.adapter_simulated_onu }}
   selector:
@@ -92,6 +114,8 @@ spec:
       annotations:
         cni: "calico"
     spec:
+      namespace: {{ .Values.global.namespace }}
+      serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
       containers:
         - name: adapter-simulated-onu
           image: {{ .Values.global.registry }}{{ .Values.images.adapter_simulated_onu.repository }}:{{ tpl .Values.images.adapter_simulated_onu.tag . }}
@@ -101,13 +125,25 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: ETCD_SERVICE
+              value: "{{ .Values.etcd.service }}"
+            - name: ETCD_SERVICE_PORT
+              value: "{{ .Values.etcd.port }}"
+            - name: ADAPTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.adapter.service }}"
+            - name: ADAPTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.adapter.port }}"
+            - name: CLUSTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.cluster.service }}"
+            - name: CLUSTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.cluster.port }}"
           args:
             - "/app/simulated_onu"
-            - "-kafka_adapter_host=kafka.$(NAMESPACE).svc.cluster.local"
-            - "-kafka_adapter_port=9092"
-            - "-kafka_cluster_host=kafka.$(NAMESPACE).svc.cluster.local"
-            - "-kafka_cluster_port=9092"
+            - "-kafka_adapter_host=$(ADAPTER_KAFKA_SERVICE)"
+            - "-kafka_adapter_port=$(ADAPTER_KAFKA_SERVICE_PORT)"
+            - "-kafka_cluster_host=$(CLUSTER_KAFKA_SERVICE)"
+            - "-kafka_cluster_port=$(CLUSTER_KAFKA_SERVICE_PORT)"
             - "-core_topic=rwcore"
-            - "-kv_store_host=etcd.$(NAMESPACE).svc.cluster.local"
-            - "-kv_store_port=2379"
+            - "-kv_store_host=$(ETCD_SERVICE)"
+            - "-kv_store_port=$(ETCD_SERVICE_PORT)"
             - "-simulator_topic=simulated_onu"
