--- a/voltha/templates/onu.yml
+++ b/voltha/templates/onu.yml
@@ -1,4 +1,4 @@
-# Copyright 2017-present Open Networking Foundation
+# Copyright 2019-present Open Networking Foundation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,13 +11,15 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+---
 apiVersion: v1
 kind: Service
 metadata:
-   name: onu
-   namespace: {{ .Values.global.namespace }}
-   labels:
-     name: onu
+  name: onu
+  namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
+  labels:
+    name: onu
 spec:
   ports:
     - name: grpc
@@ -31,6 +33,7 @@ kind: Deployment
 metadata:
   name: onu
   namespace: {{ .Values.global.namespace }}
+  serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
    replicas: {{ .Values.replicas.onu }}
    template:
@@ -40,6 +43,8 @@ spec:
        annotations:
          cni: "calico,pon0"
      spec:
+       namespace: {{ .Values.global.namespace }}
+       serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
        containers:
          - name: onu
            image: {{ .Values.global.registry }}{{ .Values.images.ponsim.repository }}:{{ tpl .Values.images.ponsim.tag . }}
