--- a/voltha/templates/rw-core-pair1.yml
+++ b/voltha/templates/rw-core-pair1.yml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ro-core
+  name: rw-core1
   namespace: {{ .Values.global.namespace }}
   serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
@@ -27,23 +27,23 @@ spec:
       port: 50057
       targetPort: 50057
   selector:
-    app: ro-core
+    app: rw-core
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ro-core
+  name: rw-core1
   namespace: {{ .Values.global.namespace }}
   serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
-  replicas: {{ .Values.replicas.ro_core }}
+  replicas: {{ .Values.replicas.rw_core }}
   selector:
     matchLabels:
-      app: ro-core
+      app: rw-core
   template:
     metadata:
       labels:
-        app: ro-core
+        app: rw-core
       annotations:
         cni: "calico"
     spec:
@@ -51,8 +51,8 @@ spec:
       serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
       containers:
         - name: voltha
-          image: {{ .Values.global.registry }}{{ .Values.images.ro_core.repository }}:{{ tpl .Values.images.ro_core.tag . }}
-          imagePullPolicy: {{ .Values.images.ro_core.pullPolicy }}
+          image: {{ .Values.global.registry }}{{ .Values.images.rw_core.repository }}:{{ tpl .Values.images.rw_core.tag . }}
+          imagePullPolicy: {{ .Values.images.rw_core.pullPolicy }}
           env:
             - name: NAMESPACE
               valueFrom:
@@ -66,16 +66,38 @@ spec:
               value: "{{ .Values.etcd.service }}"
             - name: ETCD_SERVICE_PORT
               value: "{{ .Values.etcd.port }}"
+            - name: ADAPTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.adapter.service }}"
+            - name: ADAPTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.adapter.port }}"
+            - name: CLUSTER_KAFKA_SERVICE
+              value: "{{ .Values.kafka.cluster.service }}"
+            - name: CLUSTER_KAFKA_SERVICE_PORT
+              value: "{{ .Values.kafka.cluster.port }}"
           args:
-            - "/app/ro_core"
+            - "/app/rw_core"
+            - "-instance-id=rw-core1"
             - "-kv_store_type=etcd"
             - "-kv_store_host=$(ETCD_SERVICE)"
             - "-kv_store_port=$(ETCD_SERVICE_PORT)"
             - "-grpc_host=$(POD_IP)"
             - "-grpc_port=50057"
             - "-banner=true"
-            - "-ro_core_topic=rocore"
-            - "-log_level=0"
+            - "-kafka_adapter_host=$(ADAPTER_KAFKA_SERVICE)"
+            - "-kafka_adapter_port=$(ADAPTER_KAFKA_SERVICE_PORT)"
+            - "-kafka_cluster_host=$(CLUSTER_KAFKA_SERVICE)"
+            - "-kafka_cluster_port=$(CLUSTER_KAFKA_SERVICE_PORT)"
+            - "-rw_core_topic=rwcore"
+            - "-kv_store_data_prefix=service/voltha"
+            - "-in_competing_mode=true"
+            - "-timeout_long_request=8000"
+            - "-timeout_request=6000"
+            - "-log_level=4"
           ports:
             - containerPort: 50057
               name: grpc-port
+      nodeSelector:
+        nodename: compute1
+
+
+
