--- a/voltha/templates/ofagent.yml
+++ b/voltha/templates/ofagent.yml
@@ -25,12 +25,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: CONTROLLER_SERVICE
+          value: "{{ .Values.controller.service }}:{{ .Values.controller.port }}"
         args:
         - "/ofagent/ofagent/main.py"
         - "-v"
-        - "--consul=consul.$(NAMESPACE).svc.cluster.local:8500"
-        - "--controller=onos.$(NAMESPACE).svc.cluster.local:6653"
+        - "--controller=$(CONTROLLER_SERVICE)"
         - "--grpc-endpoint=afrouter.$(NAMESPACE).svc.cluster.local:55555"
-        - "--enable-tls"
-        - "--key-file=/ofagent/pki/voltha.key"
-        - "--cert-file=/ofagent/pki/voltha.crt"
