--- a/voltha/templates/affinity-router.yml
+++ b/voltha/templates/affinity-router.yml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: afrouter
+  name: voltha-api
   namespace: {{ .Values.global.namespace }}
   serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
@@ -26,12 +26,12 @@ spec:
       port: 55555
       targetPort: 55555
   selector:
-    app: afrouter
+    app: voltha-api-server
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: afrouter
+  name: voltha-api-server
   namespace: {{ .Values.global.namespace }}
   serviceAccountName: {{ .Values.global.namespace }}-serviceaccount
 spec:
@@ -39,7 +39,7 @@ spec:
   template:
     metadata:
       labels:
-        app: afrouter
+        app: voltha-api-server
       annotations:
         cni: "calico"
     spec:
