--- a/voltha-adapter-simulated/templates/adapters-simulated.yml
+++ b/voltha-adapter-simulated/templates/adapters-simulated.yml
@@ -1,10 +1,10 @@
-# Copyright 2019 the original author or authors.
+# Copyright 2019-present Open Networking Foundation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#      http://www.apache.org/licenses/LICENSE-2.0
+# http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,8 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# simulated OLT adapter
-
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -24,6 +23,7 @@ spec:
   clusterIP: None
   selector:
     app: adapter-simulated-olt
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -76,9 +76,6 @@ spec:
             - "-kv_store_port=$(ETCD_SERVICE_PORT)"
             - "-onu_number=100"
 ---
-
-# simulated ONU adapter
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -89,6 +86,7 @@ spec:
   clusterIP: None
   selector:
     app: adapter-simulated-onu
+
 ---
 apiVersion: apps/v1
 kind: Deployment
